Alteração para a proxima etapa

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Portifólio do curso</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="stylle.css">
+    <link rel="stylesheet" href="luzes.css">
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
