--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./estilos/style.css">
     <title>Sobre Mim</title>
 </head>
 
@@ -30,7 +30,7 @@
 
         </section>
 
-        <img class="imagem__teste" src="imagem.png" alt="Foto da Joana Santos programando">
+        <img class="imagem__teste" src="./img/Imagem.png" alt="Foto da Joana Santos programando">
     </main>
 
     <footer class="footer">
