--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./estilos/style.css">
 </head>
 
 <body>
@@ -28,13 +28,13 @@
             conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulos">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__link" href="#"><img src="./Logo Github.png" alt="Icone GitHub">GitHub</a>
-                <a class="apresentacao__links__link" href="https://github.com/guilhermeonrails"><img src="./Logo linkedin.png" alt="Icone GitHub">Linkedin</a>
-                <a class="apresentacao__links__link" href="https://github.com/guilhermeonrails"><img src="./Logo Twitch.png" alt="Icone GitHub">Twitch</a>
+                <a class="apresentacao__links__link" href="#"><img src="./img/Logo Github.png" alt="Icone GitHub">GitHub</a>
+                <a class="apresentacao__links__link" href="https://github.com/guilhermeonrails"><img src="./img/Logo linkedin.png" alt="Icone GitHub">Linkedin</a>
+                <a class="apresentacao__links__link" href="https://github.com/guilhermeonrails"><img src="./img/Logo Twitch.png" alt="Icone GitHub">Twitch</a>
             </div>
             
         </section>
-        <img class="imagem__teste" src="imagem.png" alt="Foto da Joana Santos programando">
+        <img class="apresentacao__imagem" src="./img/Imagem.png" alt="Foto da Joana Santos programando">
     </main>
     <footer class="footer">
         <div>
